---
source: crates/ruff/src/rules/pyupgrade/mod.rs
---
UP032_0.py:5:1: UP032 [*] Use f-string instead of `format` call
  |
5 | ###
6 | 
7 | "{} {}".format(a, b)
  | ^^^^^^^^^^^^^^^^^^^^ UP032
8 | 
9 | "{1} {0}".format(a, b)
  |
  = help: Convert to f-string

ℹ Suggested fix
2 2 | # Errors
3 3 | ###
4 4 | 
5   |-"{} {}".format(a, b)
  5 |+f"{a} {b}"
6 6 | 
7 7 | "{1} {0}".format(a, b)
8 8 | 

UP032_0.py:7:1: UP032 [*] Use f-string instead of `format` call
   |
 7 | "{} {}".format(a, b)
 8 | 
 9 | "{1} {0}".format(a, b)
   | ^^^^^^^^^^^^^^^^^^^^^^ UP032
10 | 
11 | "{x.y}".format(x=z)
   |
   = help: Convert to f-string

ℹ Suggested fix
4 4 | 
5 5 | "{} {}".format(a, b)
6 6 | 
7   |-"{1} {0}".format(a, b)
  7 |+f"{b} {a}"
8 8 | 
9 9 | "{x.y}".format(x=z)
10 10 | 

UP032_0.py:9:1: UP032 [*] Use f-string instead of `format` call
   |
 9 | "{1} {0}".format(a, b)
10 | 
11 | "{x.y}".format(x=z)
   | ^^^^^^^^^^^^^^^^^^^ UP032
12 | 
13 | "{.x} {.y}".format(a, b)
   |
   = help: Convert to f-string

ℹ Suggested fix
6  6  | 
7  7  | "{1} {0}".format(a, b)
8  8  | 
9     |-"{x.y}".format(x=z)
   9  |+f"{z.y}"
10 10 | 
11 11 | "{.x} {.y}".format(a, b)
12 12 | 

UP032_0.py:11:1: UP032 [*] Use f-string instead of `format` call
   |
11 | "{x.y}".format(x=z)
12 | 
13 | "{.x} {.y}".format(a, b)
   | ^^^^^^^^^^^^^^^^^^^^^^^^ UP032
14 | 
15 | "{} {}".format(a.b, c.d)
   |
   = help: Convert to f-string

ℹ Suggested fix
8  8  | 
9  9  | "{x.y}".format(x=z)
10 10 | 
11    |-"{.x} {.y}".format(a, b)
   11 |+f"{a.x} {b.y}"
12 12 | 
13 13 | "{} {}".format(a.b, c.d)
14 14 | 

UP032_0.py:13:1: UP032 [*] Use f-string instead of `format` call
   |
13 | "{.x} {.y}".format(a, b)
14 | 
15 | "{} {}".format(a.b, c.d)
   | ^^^^^^^^^^^^^^^^^^^^^^^^ UP032
16 | 
17 | "{}".format(a())
   |
   = help: Convert to f-string

ℹ Suggested fix
10 10 | 
11 11 | "{.x} {.y}".format(a, b)
12 12 | 
13    |-"{} {}".format(a.b, c.d)
   13 |+f"{a.b} {c.d}"
14 14 | 
15 15 | "{}".format(a())
16 16 | 

UP032_0.py:15:1: UP032 [*] Use f-string instead of `format` call
   |
15 | "{} {}".format(a.b, c.d)
16 | 
17 | "{}".format(a())
   | ^^^^^^^^^^^^^^^^ UP032
18 | 
19 | "{}".format(a.b())
   |
   = help: Convert to f-string

ℹ Suggested fix
12 12 | 
13 13 | "{} {}".format(a.b, c.d)
14 14 | 
15    |-"{}".format(a())
   15 |+f"{a()}"
16 16 | 
17 17 | "{}".format(a.b())
18 18 | 

UP032_0.py:17:1: UP032 [*] Use f-string instead of `format` call
   |
17 | "{}".format(a())
18 | 
19 | "{}".format(a.b())
   | ^^^^^^^^^^^^^^^^^^ UP032
20 | 
21 | "{}".format(a.b().c())
   |
   = help: Convert to f-string

ℹ Suggested fix
14 14 | 
15 15 | "{}".format(a())
16 16 | 
17    |-"{}".format(a.b())
   17 |+f"{a.b()}"
18 18 | 
19 19 | "{}".format(a.b().c())
20 20 | 

UP032_0.py:19:1: UP032 [*] Use f-string instead of `format` call
   |
19 | "{}".format(a.b())
20 | 
21 | "{}".format(a.b().c())
   | ^^^^^^^^^^^^^^^^^^^^^^ UP032
22 | 
23 | "hello {}!".format(name)
   |
   = help: Convert to f-string

ℹ Suggested fix
16 16 | 
17 17 | "{}".format(a.b())
18 18 | 
19    |-"{}".format(a.b().c())
   19 |+f"{a.b().c()}"
20 20 | 
21 21 | "hello {}!".format(name)
22 22 | 

UP032_0.py:21:1: UP032 [*] Use f-string instead of `format` call
   |
21 | "{}".format(a.b().c())
22 | 
23 | "hello {}!".format(name)
   | ^^^^^^^^^^^^^^^^^^^^^^^^ UP032
24 | 
25 | "{}{b}{}".format(a, c, b=b)
   |
   = help: Convert to f-string

ℹ Suggested fix
18 18 | 
19 19 | "{}".format(a.b().c())
20 20 | 
21    |-"hello {}!".format(name)
   21 |+f"hello {name}!"
22 22 | 
23 23 | "{}{b}{}".format(a, c, b=b)
24 24 | 

UP032_0.py:23:1: UP032 [*] Use f-string instead of `format` call
   |
23 | "hello {}!".format(name)
24 | 
25 | "{}{b}{}".format(a, c, b=b)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP032
26 | 
27 | "{}".format(0x0)
   |
   = help: Convert to f-string

ℹ Suggested fix
20 20 | 
21 21 | "hello {}!".format(name)
22 22 | 
23    |-"{}{b}{}".format(a, c, b=b)
   23 |+f"{a}{b}{c}"
24 24 | 
25 25 | "{}".format(0x0)
26 26 | 

UP032_0.py:25:1: UP032 [*] Use f-string instead of `format` call
   |
25 | "{}{b}{}".format(a, c, b=b)
26 | 
27 | "{}".format(0x0)
   | ^^^^^^^^^^^^^^^^ UP032
28 | 
29 | "{} {}".format(a, b)
   |
   = help: Convert to f-string

ℹ Suggested fix
22 22 | 
23 23 | "{}{b}{}".format(a, c, b=b)
24 24 | 
25    |-"{}".format(0x0)
   25 |+f"{0x0}"
26 26 | 
27 27 | "{} {}".format(a, b)
28 28 | 

UP032_0.py:27:1: UP032 [*] Use f-string instead of `format` call
   |
27 | "{}".format(0x0)
28 | 
29 | "{} {}".format(a, b)
   | ^^^^^^^^^^^^^^^^^^^^ UP032
30 | 
31 | """{} {}""".format(a, b)
   |
   = help: Convert to f-string

ℹ Suggested fix
24 24 | 
25 25 | "{}".format(0x0)
26 26 | 
27    |-"{} {}".format(a, b)
   27 |+f"{a} {b}"
28 28 | 
29 29 | """{} {}""".format(a, b)
30 30 | 

UP032_0.py:29:1: UP032 [*] Use f-string instead of `format` call
   |
29 | "{} {}".format(a, b)
30 | 
31 | """{} {}""".format(a, b)
   | ^^^^^^^^^^^^^^^^^^^^^^^^ UP032
32 | 
33 | "foo{}".format(1)
   |
   = help: Convert to f-string

ℹ Suggested fix
26 26 | 
27 27 | "{} {}".format(a, b)
28 28 | 
29    |-"""{} {}""".format(a, b)
   29 |+f"""{a} {b}"""
30 30 | 
31 31 | "foo{}".format(1)
32 32 | 

UP032_0.py:31:1: UP032 [*] Use f-string instead of `format` call
   |
31 | """{} {}""".format(a, b)
32 | 
33 | "foo{}".format(1)
   | ^^^^^^^^^^^^^^^^^ UP032
34 | 
35 | r"foo{}".format(1)
   |
   = help: Convert to f-string

ℹ Suggested fix
28 28 | 
29 29 | """{} {}""".format(a, b)
30 30 | 
31    |-"foo{}".format(1)
   31 |+f"foo{1}"
32 32 | 
33 33 | r"foo{}".format(1)
34 34 | 

UP032_0.py:33:1: UP032 [*] Use f-string instead of `format` call
   |
33 | "foo{}".format(1)
34 | 
35 | r"foo{}".format(1)
   | ^^^^^^^^^^^^^^^^^^ UP032
36 | 
37 | x = "{a}".format(a=1)
   |
   = help: Convert to f-string

ℹ Suggested fix
30 30 | 
31 31 | "foo{}".format(1)
32 32 | 
33    |-r"foo{}".format(1)
   33 |+fr"foo{1}"
34 34 | 
35 35 | x = "{a}".format(a=1)
36 36 | 

UP032_0.py:35:5: UP032 [*] Use f-string instead of `format` call
   |
35 | r"foo{}".format(1)
36 | 
37 | x = "{a}".format(a=1)
   |     ^^^^^^^^^^^^^^^^^ UP032
38 | 
39 | print("foo {} ".format(x))
   |
   = help: Convert to f-string

ℹ Suggested fix
32 32 | 
33 33 | r"foo{}".format(1)
34 34 | 
35    |-x = "{a}".format(a=1)
   35 |+x = f"{1}"
36 36 | 
37 37 | print("foo {} ".format(x))
38 38 | 

UP032_0.py:37:7: UP032 [*] Use f-string instead of `format` call
   |
37 | x = "{a}".format(a=1)
38 | 
39 | print("foo {} ".format(x))
   |       ^^^^^^^^^^^^^^^^^^^ UP032
40 | 
41 | "{a[b]}".format(a=a)
   |
   = help: Convert to f-string

ℹ Suggested fix
34 34 | 
35 35 | x = "{a}".format(a=1)
36 36 | 
37    |-print("foo {} ".format(x))
   37 |+print(f"foo {x} ")
38 38 | 
39 39 | "{a[b]}".format(a=a)
40 40 | 

UP032_0.py:39:1: UP032 [*] Use f-string instead of `format` call
   |
39 | print("foo {} ".format(x))
40 | 
41 | "{a[b]}".format(a=a)
   | ^^^^^^^^^^^^^^^^^^^^ UP032
42 | 
43 | "{a.a[b]}".format(a=a)
   |
   = help: Convert to f-string

ℹ Suggested fix
36 36 | 
37 37 | print("foo {} ".format(x))
38 38 | 
39    |-"{a[b]}".format(a=a)
   39 |+f"{a['b']}"
40 40 | 
41 41 | "{a.a[b]}".format(a=a)
42 42 | 

UP032_0.py:41:1: UP032 [*] Use f-string instead of `format` call
   |
41 | "{a[b]}".format(a=a)
42 | 
43 | "{a.a[b]}".format(a=a)
   | ^^^^^^^^^^^^^^^^^^^^^^ UP032
44 | 
45 | "{}{{}}{}".format(escaped, y)
   |
   = help: Convert to f-string

ℹ Suggested fix
38 38 | 
39 39 | "{a[b]}".format(a=a)
40 40 | 
41    |-"{a.a[b]}".format(a=a)
   41 |+f"{a.a['b']}"
42 42 | 
43 43 | "{}{{}}{}".format(escaped, y)
44 44 | 

UP032_0.py:43:1: UP032 [*] Use f-string instead of `format` call
   |
43 | "{a.a[b]}".format(a=a)
44 | 
45 | "{}{{}}{}".format(escaped, y)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP032
46 | 
47 | "{}".format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
40 40 | 
41 41 | "{a.a[b]}".format(a=a)
42 42 | 
43    |-"{}{{}}{}".format(escaped, y)
   43 |+f"{escaped}{{}}{y}"
44 44 | 
45 45 | "{}".format(a)
46 46 | 

UP032_0.py:45:1: UP032 [*] Use f-string instead of `format` call
   |
45 | "{}{{}}{}".format(escaped, y)
46 | 
47 | "{}".format(a)
   | ^^^^^^^^^^^^^^ UP032
48 | 
49 | '({}={{0!e}})'.format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
42 42 | 
43 43 | "{}{{}}{}".format(escaped, y)
44 44 | 
45    |-"{}".format(a)
   45 |+f"{a}"
46 46 | 
47 47 | '({}={{0!e}})'.format(a)
48 48 | 

UP032_0.py:47:1: UP032 [*] Use f-string instead of `format` call
   |
47 | "{}".format(a)
48 | 
49 | '({}={{0!e}})'.format(a)
   | ^^^^^^^^^^^^^^^^^^^^^^^^ UP032
50 | 
51 | "{[b]}".format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
44 44 | 
45 45 | "{}".format(a)
46 46 | 
47    |-'({}={{0!e}})'.format(a)
   47 |+f'({a}={{0!e}})'
48 48 | 
49 49 | "{[b]}".format(a)
50 50 | 

UP032_0.py:49:1: UP032 [*] Use f-string instead of `format` call
   |
49 | '({}={{0!e}})'.format(a)
50 | 
51 | "{[b]}".format(a)
   | ^^^^^^^^^^^^^^^^^ UP032
52 | 
53 | '{[b]}'.format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
46 46 | 
47 47 | '({}={{0!e}})'.format(a)
48 48 | 
49    |-"{[b]}".format(a)
   49 |+f"{a['b']}"
50 50 | 
51 51 | '{[b]}'.format(a)
52 52 | 

UP032_0.py:51:1: UP032 [*] Use f-string instead of `format` call
   |
51 | "{[b]}".format(a)
52 | 
53 | '{[b]}'.format(a)
   | ^^^^^^^^^^^^^^^^^ UP032
54 | 
55 | """{[b]}""".format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
48 48 | 
49 49 | "{[b]}".format(a)
50 50 | 
51    |-'{[b]}'.format(a)
   51 |+f'{a["b"]}'
52 52 | 
53 53 | """{[b]}""".format(a)
54 54 | 

UP032_0.py:53:1: UP032 [*] Use f-string instead of `format` call
   |
53 | '{[b]}'.format(a)
54 | 
55 | """{[b]}""".format(a)
   | ^^^^^^^^^^^^^^^^^^^^^ UP032
56 | 
57 | '''{[b]}'''.format(a)
   |
   = help: Convert to f-string

ℹ Suggested fix
50 50 | 
51 51 | '{[b]}'.format(a)
52 52 | 
53    |-"""{[b]}""".format(a)
   53 |+f"""{a["b"]}"""
54 54 | 
55 55 | '''{[b]}'''.format(a)
56 56 | 

UP032_0.py:55:1: UP032 [*] Use f-string instead of `format` call
   |
55 | """{[b]}""".format(a)
56 | 
57 | '''{[b]}'''.format(a)
   | ^^^^^^^^^^^^^^^^^^^^^ UP032
58 | 
59 | ###
   |
   = help: Convert to f-string

ℹ Suggested fix
52 52 | 
53 53 | """{[b]}""".format(a)
54 54 | 
55    |-'''{[b]}'''.format(a)
   55 |+f'''{a["b"]}'''
56 56 | 
57 57 | ###
58 58 | # Non-errors

UP032_0.py:100:11: UP032 [*] Use f-string instead of `format` call
    |
100 | def d(osname, version, release):
101 |     return"{}-{}.{}".format(osname, version, release)
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP032
    |
    = help: Convert to f-string

ℹ Suggested fix
97  97  | 
98  98  | 
99  99  | def d(osname, version, release):
100     |-    return"{}-{}.{}".format(osname, version, release)
    100 |+    return f"{osname}-{version}.{release}"
101 101 | 
102 102 | 
103 103 | def e():

UP032_0.py:104:10: UP032 [*] Use f-string instead of `format` call
    |
104 | def e():
105 |     yield"{}".format(1)
    |          ^^^^^^^^^^^^^^ UP032
    |
    = help: Convert to f-string

ℹ Suggested fix
101 101 | 
102 102 | 
103 103 | def e():
104     |-    yield"{}".format(1)
    104 |+    yield f"{1}"
105 105 | 
106 106 | 
107 107 | assert"{}".format(1)

UP032_0.py:107:7: UP032 [*] Use f-string instead of `format` call
    |
107 | assert"{}".format(1)
    |       ^^^^^^^^^^^^^^ UP032
    |
    = help: Convert to f-string

ℹ Suggested fix
104 104 |     yield"{}".format(1)
105 105 | 
106 106 | 
107     |-assert"{}".format(1)
    107 |+assert f"{1}"


